@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rrdtool-bindings/rrdtool-bindings-1.4.8.ebuild,v 1.2 2014/05/19 18:33:20 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rrdtool-bindings/rrdtool-bindings-1.4.8.ebuild,v 1.3 2014/05/20 09:05:31 jer Exp $
 
 EAPI="5"
 
@@ -22,8 +22,7 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos ~x86-solaris"
 IUSE=""
 
-# Block on older versions of rrdtool that installl the bindings
-# themselves.
+# Block on older versions of rrdtool that install the bindings themselves.
 RDEPEND="${RDEPEND} net-analyzer/rrdtool !!<net-analyzer/rrdtool-1.4.8-r1"
 DEPEND="${DEPEND} net-analyzer/rrdtool"
 
